# lukeworks

./: .dockerignore  .envrc  .gitignore  .markdownlint.json  .stylelintrc.json  .vc-config.json  Cargo.toml  Dockerfile  Makefile.toml  README.md  builder.Dockerfile  deny.toml  index.html  justfile  legacy_routes.json  leptosfmt.toml  nginx.deployment.yml  package-lock.json  package.json  schema.txt  tailwind.config.js  todo.md  vercel.config.js  vercel.json
.cargo/: config.toml
.github/workflows/: ci.yml  outdated.yml
api/: main.rs
assets/: site.webmanifest
content/: blog_posts.toml  portfolio.toml  project_posts.toml
content/posts/: asteroids.md  bell-demodulator.md  fourier.md  personal-portfolio.md  pong.md  tetanes-part-1.md  tetanes.md
data/: 500.json  about.html  about.md  blogPosts.json  contact.html  features.json  footer.html  layout.json  not_found.html  projectPosts.json  server_error.html  sketches.json
data/posts/: chatdot.md  fireworks.md  first-post.md  lost-and-found-part-1.md  lost-and-found-part-4.md  lost-and-found-series.md  matrix.md  maze-astar.md  mindyou.md  raycasting-2d.md  software-malaise.md
deployment/: nginx.conf
locales/: en.yaml
server/: Cargo.toml
src/: about.rs  blog.rs  components.rs  contact.rs  editor.rs  file_server.rs  homepage.rs  lib.rs  lukeworks.rs  main.rs  portfolio.rs  post.rs  projects.rs  resume.rs  search.rs  server.rs  tetanes_web.rs  types.rs
src/components/: button.rs  image.rs
src/hooks/: use_theme.rs
src/lukeworks/: about.rs  blog.rs  contact.rs  editor.rs  errors.rs  homepage.rs  nav.rs  post.rs  projects.rs  resume.rs  search.rs  tetanes_web.rs
src/pages/: blog.rs  error.rs  home.rs  not_found.rs  post.rs  projects.rs  resume.rs  search.rs  tetanes_web.rs
src/portfolio/: about.rs  blog.rs  constants.rs  contact.rs  data.rs  errors.rs  footer.rs  header.rs  homepage.rs  icons.rs  models.rs  post.rs  projects.rs  resume.rs  rss.rs  search.rs  tetanes_web.rs
style/: main.css  tailwind.css
web/: .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.js  jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
web/.husky/: pre-push
web/public/: index.html  manifest.json  site.webmanifest
web/public/tetanes-web/: index.html  tetanes-32b77941a1193314.js  tetanes-332a4452c8545967.js  tetanes-4b562d32961c37db.js  tetanes-7b0e45c2cfce910d.js  tetanes-8c1626a2fc12c412.js  tetanes-9db4ecad9571fa88.js  tetanes-aa03b05f3503d08a.js  tetanes-dc57606e33dad5ba.js  tetanes-e336354b120eaa6c.js  tetanes-f6e42af4be72c011.js  tetanes-f86d1b9355340c04.js
web/src/: ErrorBoundary.css  ErrorBoundary.tsx  LukeWorks.css  LukeWorks.js  LukeWorks.tsx  NotFound.tsx  additional.d.ts  global.css  global.d.ts  global.styles.js  global.styles.ts  index.js  index.tsx  legacyRoutes.json  react-app-env.d.ts  reportWebVitals.ts  routes.json  setupTests.ts  sitePaths.js  sitePaths.ts
web/src/__tests__/: index.test.tsx
web/src/admin/: Admin.tsx  Login.tsx  index.ts
web/src/components/: hashAnchor.tsx  icons.ts
web/src/components/errorBoundary/: errorBoundary.module.css  errorBoundary.tsx  index.ts
web/src/components/footer/: footer.module.css  footer.tsx
web/src/components/header/: header.module.css  header.tsx
web/src/components/homepage/: about.tsx  blog.tsx  contact.tsx  homepage.module.css  projects.tsx
web/src/components/layout/: layout.module.css  layout.tsx
web/src/components/linkIcon/: index.ts  linkIcon.module.css  linkIcon.tsx
web/src/components/loading/: loading.module.css  loading.tsx
web/src/components/post/: cardGrid.module.css  cardGrid.tsx  showMore.module.css  showMore.tsx
web/src/components/resume/: contact.tsx  education.tsx  employment.tsx  experience.tsx  header.tsx  ribbon.tsx  technologies.tsx
web/src/components/sketch/: asteroids.ts  fireworks.ts  fluid-simulation.ts  fourier.ts  lorenz-attractor.ts  matrix.ts  maze-astar.ts  pong.ts  raycasting-2d.ts  utils.ts
web/src/data/: 404.json  about.json  blogPosts.json  contact.json  features.json  footer.json  index.json  intro.json  login.json  projectPosts.json  resumeInfo.json  tetanes.json
web/src/data/posts/: fluid-simulation.md  haskelltaire.md  lorenz-attractor.md  lost-and-found-part-1.md  lost-and-found-part-2.md  lost-and-found-part-3.md  lost-and-found-part-5.md  pix-engine.md  software-malaise.md  tetanes-part-2.md  umflint-env-sci-club.md
web/src/guards/: AuthGuard.tsx  GuestGuard.tsx
web/src/hooks/: useAsync.ts  useAuth.ts  useClickOutside.ts  useDebounce.ts  useEventListener.ts  useKonamiCode.ts  useMetaTag.ts  useOnScreen.ts
web/src/models/: post.ts
web/src/pages/: 404.tsx  500.tsx  [title].tsx  _app.tsx  _document.tsx  admin.tsx  index.tsx  login.tsx  resume.tsx  tetanes-web.tsx
web/src/pages/sketch/: [title].tsx
web/src/pages/styles/: index.module.css  post.module.css  resume.module.css
web/src/portfolio/: Icons.ts  Portfolio.css  Portfolio.tsx
web/src/portfolio/components/: Footnote.tsx  HashAnchor.tsx
web/src/portfolio/data/: blogPosts.json  copy.json  projectPosts.json
web/src/portfolio/models/: post.ts  projectPost.ts
web/src/resume/: Resume.css  Resume.tsx  resumeInfo.json
web/src/resume/components/: Contact.tsx  Education.tsx  Employment.tsx  Experience.tsx  Header.css  Header.tsx  Profile.tsx  Skills.tsx  Technologies.tsx
web/src/sites/: index.js  index.ts
web/src/sites/Admin/: Admin.js  Admin.tsx  Login.js  Login.tsx  index.js
web/src/sites/Lukeworks/: index.js  theme.js
web/src/sites/Portfolio/: Icons.ts  Portfolio.js  Portfolio.tsx  legacyRoutes.json  legacyRoutes.ts  portfolio.styles.js  portfolio.styles.ts  routes.json  routes.ts  theme.js  theme.ts
web/src/sites/Resume/: Resume.js  Resume.tsx  index.js  resumeInfo.js  resumeInfo.json
web/src/sites/TetanesWeb/: index.js
web/src/util/: AuthRoute.tsx  ErrorBoundary.js  ErrorBoundary.tsx  PrivateRoute.js  constants.js  scroll.js
web/src/util/hooks/: index.ts  useAsync.js  useAsync.ts  useClickOutside.ts  useDebounce.js  useDebounce.ts  useEventListener.js  useKonamiCode.ts
(+170 files in other folders)
