[package]
name = "lukeworks"
version = "0.1.0"
edition = "2021"
default-run = "lukeworks"
resolver = "2"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
  "std",
] }
leptos = { version = "0.5", features = ["rustls"] }
leptos_meta = { version = "0.5" }
leptos_dom = { version = "0.5" }
leptos_router = { version = "0.5" }
once_cell = "1"
thiserror = "1"
uuid = { version = "1.4", features = ["v4"] }

# dependecies for client (enabled with `hydrate` feature)
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1", optional = true }
log = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "AbortController",
  "AbortSignal",
  "HtmlDocument",
  "MediaQueryList",
  "Window",
] }

# dependecies for server (enabled with `ssr` feature)
axum = { version = "0.6", optional = true }
leptos_axum = { version = "0.5", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", features = ["fs", "trace"], optional = true }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
], optional = true }
tracing-appender = { version = "0.2", optional = true }
axum-extra = { version = "0.8.0", features = ["cookie"] }

[features]
hydrate = [
  "dep:console_error_panic_hook",
  "dep:console_log",
  "dep:log",
  "dep:wasm-bindgen",
  "dep:web-sys",
  "leptos/hydrate",
  "leptos_meta/hydrate",
  "leptos_router/hydrate",
]
ssr = [
  "dep:axum",
  "dep:leptos_axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:tracing-appender",
  "dep:tracing-subscriber",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
perf = []

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
strip = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
assets-dir = "assets"
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"
style-file = "style/main.css"
tailwind-input-file = "style/tailwind.css"
