[package]
name = "lukeworks"
version = "1.0.0"
rust-version = "1.91.1"
edition = "2024"
resolver = "3"
description = "A blog and project portfolio by Lucas Petherbridge on programming, technology, and video games."
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
large_futures = "warn"
missing_const_for_fn = "warn"
print_literal = "warn"

[workspace.lints.rust]
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_compatibility = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
rust_2024_compatibility = "warn"
unused = "warn"

[features]
hydrate = ["dep:console_error_panic_hook", "dep:wasm-bindgen", "leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:axum-extra",
  "dep:leptos_axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:tracing",
  "dep:tracing-subscriber",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos-use/axum",
  "leptos-use/ssr",
]

[dependencies]
# global dependencies
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
  "std",
  "wasmbind",
] }
comrak = { version = "0.47", default-features = false }
icondata = { version = "0.6", default-features = false, features = [
  "bootstrap-icons",
] }
leptos = { version = "0.8", features = ["rustls"] }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }
web-sys = { version = "0.3", features = [
  "Clipboard",
  "Document",
  "MediaQueryList",
  "Window",
] }

# `hydrate` dependencies
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "=0.2.105", optional = true }

# `ssr` dependencies
axum = { version = "0.8", optional = true }
axum-extra = { version = "0.12", features = ["cookie"], optional = true }
leptos_axum = { version = "0.8", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5", features = ["limit"], optional = true }
tower-http = { version = "0.6", features = [
  "compression-gzip",
  "cors",
  "fs",
  "trace",
], optional = true }
tracing = { version = "0.1", features = [
  "release_max_level_info",
  "log",
], optional = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }
leptos-use = { version = "0.16", default-features = false, features = [
  "use_cookie",
] }

[profile.dev]
# Disabling debug info greatly speeds up compile times
# See: https://kobzol.github.io/rust/rustc/2025/05/20/disable-debuginfo-to-improve-rust-compile-times.html
#
# `debug = false` saves both compile time and WASM download times when hot-reloading.
# When you specifically need to track down a line for debugging, change to
# "limited" or comment it out entirely
debug = false
# A higher opt-level can speed up overall incremental compile times and give a
# performance boost
opt-level = 1

# A higher opt-level can speed up overall incremental compile times and give a
# performance boost
[profile.dev.package."*"]
opt-level = 3
[profile.dev.build-override]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"      # similar to true, but substantially faster
# See: https://smallcultfollowing.com/babysteps/blog/2024/05/02/unwind-considered-harmful/
panic = "abort"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
# See: https://github.com/leptos-rs/cargo-leptos/issues/441
strip = false

[package.metadata.leptos]
site-root = "target/site"
style-file = "style/main.css"
tailwind-input-file = "style/tailwind.css"
assets-dir = "public"
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"
